--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: cd ui
-            - run: npm install
+            - run: cd ui && npm install
             - run: npm test
 workflows:
     build-and-test:
