--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: cd ui && npm install
-            - run: npm test
+            - run: cd ui && npm test
 workflows:
     build-and-test:
       jobs:
