--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,15 @@
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-and-test
+      - deploy:
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: master
+
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
@@ -18,7 +30,3 @@ jobs:
           name: Deploy Master to Heroku
           command: |
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
