Add a deploy step to the CI pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,13 @@ jobs:
             - run: npm install
             - run: npm test
   deploy:
+    executor: default
     steps:
       - checkout
       - run:
           name: Deploy Master to Heroku
           command: |
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+
+
