--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,15 @@
+workflows:
+  version: 2.1
+  build-deploy:
+    jobs:
+      - build-and-test
+      - deploy:
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: master
+
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
@@ -11,7 +23,15 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  deploy:
+    docker:
+      - image: docker:stable-git
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+
+
